# opentelemetry-c-performance

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  otel-collector-compose.yaml  run-logs-benchmarks.sh  run-metrics-benchmarks.sh  run-traces-benchmarks.sh  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: otel-collector-config.yml
include/: utils.h
include/common/: telemetry_data_tracepoint.h  utils.h
results/: Benchmarks.xlsx  LTTng + OpenTelemetry Benchmarks.xlsx  compile_metrics_benchmarks.py  compile_traces_benchmarks.py  metrics_benchmarks.txt  metrics_benchmarks_compiled.txt  traces_benchmarks.txt  traces_benchmarks_compiled.txt
src/: utils.c
src/common/: telemetry_data_tracepoint.c  utils.c
src/logs/: simple.c
src/metrics/: observable_up_down_counter_1000.c  observable_up_down_counter_500.c
src/traces/: attribute.c  context-extraction.c  context_extraction.c  event.c  nested-span.c  nested_span.c  simple.c  span-context.c  span_context.c
